Fixed layout bug in mobile editor layout

--- a/www/style-brutalist.css
+++ b/www/style-brutalist.css
@@ -2776,6 +2776,9 @@ ol {
 		width: 2em;
 		height: 1em;
 	}
+	#edit-post-form textarea {
+		min-height: unset;
+	}
 	.textarea-container:focus-within textarea {
 		position: fixed;
 		top: -1px;
